# QNodeEditor

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
QNodeEditor/: __init__.py  dialog.py  edge.py  editor.py  entry.py  node.py  scene.py  socket.py  util.py
QNodeEditor/clipboard/: __init__.py  clipboard.py
QNodeEditor/entries/: __init__.py  combo_box.py  labeled.py  text_box.py  value_box.py
QNodeEditor/graphics/: __init__.py  cutter.py  edge.py  entry.py  node.py  scene.py  socket.py  view.py
QNodeEditor/history/: __init__.py  history.py
QNodeEditor/metas/: __init__.py  graphics_path_item.py  object.py
QNodeEditor/serialise/: __init__.py  serialise.py
QNodeEditor/themes/: __init__.py  dark.py  light.py  theme.py
QNodeEditor/widgets/: __init__.py  combo_box.py  empty.py  label.py  text_box.py  value_box.py
docs/: QNodeEditor.entries.rst  QNodeEditor.graphics.rst  QNodeEditor.history.rst  QNodeEditor.metas.rst  QNodeEditor.rst  QNodeEditor.themes.rst  conf.py  getting_started.rst  index.rst
docs/_build/doctrees/: QNodeEditor.clipboard.doctree  QNodeEditor.doctree  QNodeEditor.entries.doctree  QNodeEditor.graphics.doctree  QNodeEditor.history.doctree  QNodeEditor.metas.doctree  QNodeEditor.serialise.doctree  QNodeEditor.themes.doctree  QNodeEditor.widgets.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  QNodeEditor.clipboard.html  QNodeEditor.entries.html  QNodeEditor.graphics.html  QNodeEditor.history.html  QNodeEditor.html  QNodeEditor.metas.html  QNodeEditor.serialise.html  QNodeEditor.themes.html  QNodeEditor.widgets.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: QNodeEditor.clipboard.rst.txt  index.rst.txt  (+3 more)
docs/_templates/: custom-class-template.rst
docs/reference/: index.rst
docs/reference/_autosummary/: QNodeEditor.clipboard.clipboard.Clipboard.rst  QNodeEditor.clipboard.clipboard.rst  QNodeEditor.clipboard.rst  QNodeEditor.dialog.NodeEditorDialog.rst  QNodeEditor.dialog.rst  QNodeEditor.edge.Edge.rst  QNodeEditor.edge.rst  QNodeEditor.editor.NodeEditor.rst  QNodeEditor.editor.rst  QNodeEditor.entries.combo_box.ComboBoxEntry.rst  QNodeEditor.entries.combo_box.rst  QNodeEditor.entries.labeled.LabeledEntry.rst  QNodeEditor.entries.labeled.rst  QNodeEditor.entries.rst  QNodeEditor.entries.text_box.TextBoxEntry.rst  QNodeEditor.entries.text_box.rst  QNodeEditor.entries.value_box.ValueBoxEntry.rst  QNodeEditor.entries.value_box.rst  QNodeEditor.entry.Entry.rst  QNodeEditor.entry.rst  QNodeEditor.graphics.cutter.Cutter.rst  QNodeEditor.graphics.cutter.rst  QNodeEditor.graphics.edge.BezierEdgeGraphics.rst  QNodeEditor.graphics.edge.DirectEdgeGraphics.rst  QNodeEditor.graphics.edge.EdgeGraphics.rst  QNodeEditor.graphics.edge.rst  QNodeEditor.graphics.entry.EntryGraphics.rst  QNodeEditor.graphics.entry.rst  QNodeEditor.graphics.node.NodeGraphics.rst  QNodeEditor.graphics.node.rst  QNodeEditor.graphics.rst  QNodeEditor.graphics.scene.NodeSceneGraphics.rst  QNodeEditor.graphics.scene.rst  QNodeEditor.graphics.socket.SocketGraphics.rst  QNodeEditor.graphics.socket.rst  QNodeEditor.graphics.view.NodeView.rst  QNodeEditor.graphics.view.rst  QNodeEditor.history.history.rst  QNodeEditor.history.rst  QNodeEditor.metas.graphics_path_item.GraphicsPathItemMeta.rst  (+40 more)
examples/calculator/: main.py
examples/calculator/nodes/: output.py
examples/dialog/: main.py  state.json
examples/dialog/nodes/: __init__.py  constant.py  operation.py  output.py  square_root.py
